CDCEO submission sent.

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -87,6 +87,7 @@
 }
 
 @misc{Abadi2015,
+author={Mart\'{\i}n~Abadi and others},
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={https://www.tensorflow.org/},
 note={{S}oftware available from tensorflow.org},
@@ -219,4 +220,13 @@ volume={},
 number={},
 pages={1-6},
 doi={10.1109/UIC-ATC.2017.8397411},
+}
+
+@data{HoustonDataset,
+doi = {10.21227/jnh9-nz89},
+url = {https://dx.doi.org/10.21227/jnh9-nz89},
+author = {Prasad, Saurabh and Le Saux, Bertrand and Yokoya, Naoto and Hansch, Ronny},
+publisher = {{IEEE} Dataport},
+title = {2018 {IEEE GRSS Data Fusion Challenge - Fusion of Multispectral LiDAR and Hyperspectral Data}},
+year = {2018},
 }
